G1ParScanThreadState::update_rs does not need to call is_in_reserved

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • gc
    • b99

      The method G1ParScanThreadState does not need to call from->is_in_reserved since it already has both the object and the field. Given both the object and the field, the following expression will check if both the object and the field are in the same region:
      ((p ^ obj) >> log2HeapRegionSize) == 0.

            Assignee:
            Erik Helin
            Reporter:
            Erik Helin
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: