8144072: G1ParScanThreadState::update_rs does not need to call is_in_reserved

Reviewed-by: tschatzl, mgerdin