hotspot/src/share/vm/gc/g1/g1ParScanThreadState.hpp
@@ -101,7 +101,7 @@ class G1ParScanThreadState : public CHeapObj<mtGC> {
   template <class T> void update_rs(HeapRegion* from, T* p, oop o) {
     // If the new value of the field points to the same region or
     // is the to-space, we don't need to include it in the Rset updates.
-    if (!from->is_in_reserved(o) && !from->is_young()) {
+    if (!HeapRegion::is_in_same_region(p, o) && !from->is_young()) {
       size_t card_index = ctbs()->index_for(p);
       // If the card hasn't been added to the buffer, do it.
       if (ctbs()->mark_card_deferred(card_index)) {
